--- a/index.html
+++ b/index.html
@@ -1,16 +1,60 @@
+<!DOCTYPE html>
+
 <html>
     <head>
+    <title>Interest Calculator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>Simple Interest Calculator</h1>
+        <div class="maindiv">
+            <h1>Simple Interest Calculator</h1>
+            <div class="textdiv">
+                <table>
+                    <tr>
+                        <td>Amount</td>
+                        <td><input type="number" pattern="[0-9]*" id="principal"></td>
+                    </tr>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+                    <tr>
+                        <td>Rate</td>
+                        <td><input type="range"  id="rate" min="1"
+                    max="20" step="0.25" value="10.25" onchange="updateRate()">
+                    <span id="rate_val">10.25%</span></td>
+                    </tr>
 
-        <button onclick="compute()">Compute</button>
+                    <tr>
+                        <td>No. of Years </td>
+                        <td>
+                            <select id="years">
+                            <option value="1"> 1 </option>
+                            <option value="2"> 2 </option>
+                            <option value="3"> 3 </option>
+                            <option value="4"> 4 </option>
+                            <option value="5"> 5 </option>
+                            <option value="6"> 6 </option>
+                            <option value="7"> 7 </option>
+                            <option value="8"> 8 </option>
+                            <option value="9"> 9 </option>
+                            <option value="10"> 10 </option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+                <br/>
+
+                <button onclick="compute()">Compute Interest</button> <br/>
+
+                <span id="result">
+
+                </span><br/>
+            </div>
+            <footer>
+                &#169; This Calculator belongs to Min Shin Khant
+            </footer>
+        </div>
     </body>
 </html>
